# fashion-frenzy

./: .dockerignore  .gitignore  Dockerfile  README.md  banana_list.txt  main.py  pyproject.toml
modules/: __init__.py  chatbot.py  ecommerce_scraper.py  ui_components.py  vton.py  wardrobe.py
